Added some views and gulp config

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,30 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+#home {
+  #teaser {
+  }
+  #offers {
+  }
+}
+
+#show {
+  .bike {
+  }
+  .motorbike {
+  }
+}
+
+#list {
+  .bike {
+  }
+  .motorbike {
+  }
+}
+
+#header {
+
+}
+
+#footer {
+
+}
