--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,30 +1,3 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
-#home {
-  #teaser {
-  }
-  #offers {
-  }
-}
-
-#show {
-  .bike {
-  }
-  .motorbike {
-  }
-}
-
-#list {
-  .bike {
-  }
-  .motorbike {
-  }
-}
-
-#header {
-
-}
-
-#footer {
-
-}
+@import "layout";
+@import "home";
