--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -18,3 +18,22 @@
     width: 1170px;
   }
 }
+
+#sortable_information {
+  list-style-type: none;
+  li {
+    border: 2px dashed darkblue;
+    padding-top: 20px;
+    padding-left: 10px;
+    margin-bottom: 10px;
+  }
+}
+#sortable_vehicle {
+  list-style-type: none;
+  li {
+    border: 2px dashed darkblue;
+    margin-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+}
