--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -28,6 +28,9 @@
     margin-bottom: 10px;
   }
 }
+#sortable_information_vehicle {
+  list-style-type: none;
+}
 #sortable_vehicle {
   list-style-type: none;
   li {
