--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,8 +1,19 @@
 @import "libs/bootstrap-less/bootstrap";
+@import "theme";
+@import "variables";
 
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
 body, label, .checkbox label {
 	font-weight: 300;
+}
+
+#home {
+	#teaser {
+		background-image: url("/img/home/teaser.jpg");
+		max-width: 100%;
+		max-height: 100%;
+		background-position: center;
+	}
 }
