--- a/resources/assets/less/theme.less
+++ b/resources/assets/less/theme.less
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #f2f2f2;
+  background-color: @background-color;
   font-family: "Lato";
   font-weight: 300;
   font-size: 16px;
@@ -127,7 +127,7 @@ hr {
 }
 
 #footerwrap {
-  background-color: #2f2f2f;
+  background-color: @secondary-color;
   color: white;
   padding-top: 40px;
   padding-bottom: 60px;
