--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -313,3 +313,8 @@ body, label, .checkbox label {
 	text-align: center;
 	margin-bottom: 40px;
 }
+
+/*Hide minutes in datarangepicker*/
+.calendar-time .minuteselect{
+	display: none;
+}
