--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -24,21 +24,49 @@
 #sortable_information {
   list-style-type: none;
   li {
-    border: 2px dashed darkblue;
+    border: 2px solid darkblue;
+    background: lightgrey;
+    box-shadow: 5px 5px 2px #888888;
     padding-top: 20px;
     padding-left: 10px;
     margin-bottom: 10px;
+    margin-left: -40px;
   }
 }
+.category_group{
+  padding: 30px;
+}
+.category_item{
+  border: 2px solid darkblue;
+  background: lightgrey;
+  box-shadow: 5px 5px 2px #888888;
+  padding-top: 20px;
+  padding-left: 10px;
+  margin-bottom: 10px;
+  height: 75px;
+}
+
 #sortable_information_vehicle {
   list-style-type: none;
 }
 #sortable_vehicle {
   list-style-type: none;
   li {
-    border: 2px dashed darkblue;
+    border: 2px solid darkblue;
+    box-shadow: 5px 5px 2px #888888;
+    background: lightgrey;
     margin-bottom: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
+    margin-left: -40px;
   }
+}
+.reservation-status-0{
+  background-color: #ffe87c;
+}
+.reservation-status-1{
+  background-color: #ebcccc;
+}
+.reservation-status-2{
+  background-color: #98daca;
 }
