--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -70,3 +70,17 @@
 .reservation-status-2{
   background-color: #98daca;
 }
+.dropdown-menu  .menu.widget-reservation{
+  li{
+    border-bottom: 1px solid grey;
+    position: relative;
+    padding: 10px;
+    small{
+      color: #999999;
+      font-size: 10px;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+    }
+  }
+}
